Removed horizontal scrolling on the mobile view, now I need to fix it on the PC styles.

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -3,6 +3,8 @@ body {
   color: #333;
   background-color: $mainBack;
   display: table;
+  overflow-x: hidden;
+  position: relative
 }
 
 img {
