--- a/app/assets/styles/modules/_nav-menu.css
+++ b/app/assets/styles/modules/_nav-menu.css
@@ -12,7 +12,7 @@
   &__content {
     position: relative;
     display: block;
-    min-width: 100%;
+    width: 100%;
     list-style: none;
     background-color: slategrey;
 
