--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -4,6 +4,6 @@
   font-weight: 200;
 
   &__text {
-    display: table-row;
+
   }
 }
