--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -5,8 +5,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  min-width: 100%;
-  letter-spacing: -.01em;
+  width: 100%;
   z-index: 3;
 
   &__text {
@@ -19,11 +18,11 @@
     @mixin atSmall{
     text-align: left;
     font-size: 3.4vw;
-    margin: 3rem 5vw 2rem 5vw;
+    margin: 3rem 5vw 2rem 0;
     }
 
     @mixin atMedium {
-      margin-left: 5vw;
+      margin-left: 0;
     }
 
   }
