--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,12 +1,12 @@
 .wrapper {
   position: relative;
   height: 100%;
-  min-width: 100%;
+  width: 100%;
   padding: 20px;
 
   &__splashscreen {
     padding: 0;
-    overflow: hidden;
+
   }
 
   &--header
@@ -17,11 +17,7 @@
   }
 
   &--center {
-    margin-left: 18%;
 
-    @mixin atMedium{
-      margin-left: 40%;
-    }
   }
 
 }
